--- a/GK2_TrianglesFiller/MainWindow.xaml
+++ b/GK2_TrianglesFiller/MainWindow.xaml
@@ -76,7 +76,7 @@
 
                     <StackPanel Grid.Column="1" Grid.Row="4">
                         <Label Content="Fill color" Height="30" DockPanel.Dock="Top" VerticalAlignment="Center" FontSize="18" UseLayoutRounding="False" VerticalContentAlignment="Center"/>
-                        <RadioButton GroupName="{Binding FillColorGroup}" IsChecked="false"  x:Name="RadioFillColor1" Content="Exact" HorizontalAlignment="Center" Height="33" Margin="87,0,67,0" Width="96"
+                        <RadioButton GroupName="{Binding FillColorGroup}" IsChecked="true"  x:Name="RadioFillColor1" Content="Exact" HorizontalAlignment="Center" Height="33" Margin="87,0,67,0" Width="96"
                                      Checked="RadioFillColor_Checked"/>
                         <RadioButton GroupName="{Binding FillColorGroup}" IsChecked="false"  x:Name="RadioFillColor2" Content="From vertices" HorizontalAlignment="Center" DockPanel.Dock="Top" Height="33" Margin="86,0,67,0" Width="96"
                                      Checked="RadioFillColor_Checked"/>
